.policies/linkerd/add-linkerd-policy-annotation/add-linkerd-policy-annotation.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-linkerd-policy-annotation
  annotations:
    policies.kyverno.io/title: Add Linkerd Policy Annotation
    policies.kyverno.io/category: Linkerd
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Namespace,Annotation
    policies.kyverno.io/description: >-
      Linkerd will, by default, allow all incoming traffic to Pods in the mesh
      including that from outside the cluster network. In many cases, this default
      needs to be changed to deny all traffic so it may be selectively
      opened using Linkerd policy objects. This policy sets the annotation
      `config.linkerd.io/default-inbound-policy` to `deny`, if not present, for new Namespaces.
      It can be customized with exclusions to more tightly control its application.
spec:
  rules:
  - name: deny-inbound-namespace
    match:
      any:
      - resources:
          kinds:
          - Namespace
    mutate:
      patchStrategicMerge:
        metadata:
          annotations:
            +(config.linkerd.io/default-inbound-policy): deny
